Tue Oct  6 18:33:50 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Added a test for ACE_OS::fileno(). Patch to cleanup ACE_OS::fileno()
          implementation will be committed later.

Tue Oct  6 14:06:02 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
          Minor cleanup.

Tue Oct  6 06:20:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check idl3 files as idl file

Sun Oct  4 19:36:27 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_stdio.inl (vsnprintf): Added some more checks in other
          parts of the code to ensure we don't index before the bounds of
          the array.  Thanks to Johnny Willemsen for suggesting this.

Sun Oct  4 14:23:55 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_stdio.inl (vsnprintf): Added a check to ensure we
          don't index before the bounds of the array.  Thanks to Hui Zhang
          <zhanghui9527 at gmail dot com> for reporting this.

Fri Oct  2 15:24:33 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Condition_T.cpp (wait): fixed the call to cond_timewait() so
          it uses a copy of the const parameter to avoid breaking the
          const contract.  Thanks to William Glenn <wglenn at scires dot
          com> for reporting this.

Thu Oct  1 13:44:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Makefile.am:
          Removed duplicate Timer_Queuefwd.h. Thanks to Christian Ehrlicher
          <Ch dot Ehrlicher at gmx dot de> for reporting this

Thu Oct  1 12:07:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended some fuzz messages with how to fix them

Wed Sep 29 09:59:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.6.GNU:
          Added workaround for bug in the diab compiler. Thanks to