@@ -1,3 +1,8 @@
+Tue Oct  6 20:22:28 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/config-freebsd.h:
+          Reorganised file.
+
 Tue Oct  6 18:33:50 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * tests/OS_Test.cpp:
